# STT-YanQi

./: .gitignore  LICENSE  README.md  README_EN.md  THIRD_PARTY_NOTICES.md  VoiceBackend.spec  VoiceInput.spec  build.bat  build_release.py  download_model.bat  download_model.ps1  requirements.txt  run.bat  run_test.bat  test_e2e.py  voice_backend.py  voice_input.py
docs/: ARCHITECTURE.md  CLOUD_POLISH_PLAN.md  DEVELOPMENT.md  INDEX.md  LLM_POLISH_PLAN.md  LLM_POLISH_RESEARCH.md  PRIVACY.md  RELEASE.md
hooks/: hook-sherpa_onnx.py
legacy/tkinter-pyinstaller/: README_EN.md  VoiceInput.spec  build_release.bat  run_debug.bat  voice_input.py
packaging/pyinstaller/: VoiceBackend.spec
packaging/updater/: README.md
scripts/: build-backend.ps1  build-release.ps1  download-polish-model.ps1  sign-windows.ps1  test-release-smoke.ps1
tests/: test_polish_regression.py  test_sound_routing.py
ui-tauri/: README.md  index.html  package-lock.json  package.json
ui-tauri/src/: App.css  App.tsx  backend.ts  i18n.ts
ui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
ui-tauri/src-tauri/capabilities/: default.json
ui-tauri/src-tauri/icons/: icon.icns  tray-32.rgba
ui-tauri/src-tauri/src/: lib.rs  main.rs  product.rs
ui-tauri/src/styles/: tokens.css
voice_core/: __init__.py  runtime.py
